--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     To secure an entry-level position in web development where I can apply my skills and knowledge 
     to contribute to innovative projects.
     <hr/>
-    <h2>Aducation:</h2>
+    <h2>Education:</h2>
     <ul>
         <li>Matriculation (High School Diploma), [Future Learning Academy], [2023/08/01]</li>
     </ul>
